--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.21MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇨🇳 中国-451.0KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.30MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.49MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-416.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.02MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.58MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-639.6KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-339.8KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇨🇳 中国-436.7KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-397.0KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-466.2KB/s(Youtube:不良林), server: 165.154.253.49, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-639.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-639.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-639.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-639.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-639.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-639.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-639.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-339.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
