--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.46MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-436.7KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇸🇬 新加坡-466.2KB/s(Youtube:不良林), server: 165.154.253.49, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.42MB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.89MB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.96MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.18MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca911d30af65ef1b, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-421.4KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.24MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.98MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.73MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.47MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.64MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.66MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇨🇳 中国-10.82MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.25MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-466.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
